--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -19,9 +19,6 @@
                         <h1 class="display-4 font-weight-bold mb-4">Contattaci</h1>
                         <p class="lead">Siamo qui per aiutarti. Scegli il modo più comodo per metterti in contatto con noi.</p>
                     </div>
-                    <div class="col-lg-6">
-                        <img src="/img/contact-hero.svg" alt="Contattaci" class="img-fluid">
-                    </div>
                 </div>
             </div>
         </section>
@@ -84,7 +81,7 @@
                                     </div>
                                     <div>
                                         <h5 class="mb-0">Indirizzo</h5>
-                                        <p class="mb-0 text-muted">Via Roma 123, Milano</p>
+                                        <p class="mb-0 text-muted">Piazza Carlo Poerio 2, Bari</p>
                                     </div>
                                 </div>
                             </div>
