--- a/src/views/settings.ejs
+++ b/src/views/settings.ejs
@@ -314,7 +314,7 @@
     </div>
     
     <!-- Aggiungi questo dopo il resto del contenuto ma prima degli script -->
-
+                 <!-- TEST IMPOSTAZIONI
     <div class="modal fade" id="testSettingsModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -325,6 +325,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
+
                     <form id="testSettingsForm" action="/test-settings" method="POST">
                         <div class="form-group">
                             <label for="testValue">Valore di test</label>
@@ -332,6 +333,7 @@
                         </div>
                         <div id="testSettingsResult" class="mt-3"></div>
                     </form>
+
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Chiudi</button>
@@ -344,7 +346,7 @@
     <button type="button" class="btn btn-info fixed-bottom ml-3 mb-3" data-toggle="modal" data-target="#testSettingsModal">
         Test Impostazioni
     </button>
-
+-->
     <script>
         $(document).ready(function() {
             // Invia il form di test tramite AJAX
